...
            </objects>
            <point key="canvasLocation" x="654" y="530"/>
        </scene>
        <!--Log In-->
        <scene sceneID="Bkj-LT-cQR">
            <objects>
                <viewController title="Log In" id="Vbt-0a-j0c" customClass="LogInViewController" customModule="KarateApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="xau-a1-Q4H">
                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="hdW-HG-xaE">
                                <rect key="frame" x="10" y="603" width="1004" height="160"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Email" textAlignment="center" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EEi-1L-7og">
                                        <rect key="frame" x="0.0" y="0.0" width="1004" height="40"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="nqU-NK-CLM"/>
                                        </constraints>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Password" textAlignment="center" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cOr-yf-3T8">
                                        <rect key="frame" x="0.0" y="60" width="1004" height="40"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="nML-Hx-A8n"/>
                                        </constraints>
                                        <nil key="textColor"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gum-Lb-KIY">
                                <rect key="frame" x="121" y="1309" width="782" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="jQS-Fe-KLv"/>
                                </constraints>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                <state key="normal" title="Sign Up"/>
                                <connections>
                                    <segue destination="lwS-je-LKy" kind="show" id="WXy-ur-jxW"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Log In" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hsd-NR-nHP">
                                <rect key="frame" x="77" y="35" width="870" height="59"/>
...
                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="4NB-DO-jaO">
                                <rect key="frame" x="10" y="573" width="1004" height="220"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yl8-hO-h8g">
                                        <rect key="frame" x="0.0" y="0.0" width="1004" height="40"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="WIA-O7-ALl"/>
                                        </constraints>
                                        <nil key="textColor"/>
...
                                        <rect key="frame" x="10" y="1164" width="1004" height="40"/>
                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="WWc-H0-Tul"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                        <state key="normal" title="Finish">
                                            <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="finishButtonPressed:" destination="afq-9F-ao9" eventType="touchUpInside" id="24j-Cn-1Lo"/>
                                        </connections>
                                    </button>
...
