...
                            <constraint firstItem="aFa-dv-YcP" firstAttribute="bottom" secondItem="1y4-za-aOC" secondAttribute="bottom" id="WNr-jc-rqe"/>
                            <constraint firstItem="aFa-dv-YcP" firstAttribute="trailing" secondItem="1y4-za-aOC" secondAttribute="trailing" id="g0c-z7-zrh"/>
                            <constraint firstItem="1y4-za-aOC" firstAttribute="leading" secondItem="aFa-dv-YcP" secondAttribute="leading" id="jhG-dg-3Vt"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="aFa-dv-YcP"/>
                    </view>
                    <navigationItem key="navigationItem" title="Home" id="uTj-Vh-r8c">
                        <barButtonItem key="rightBarButtonItem" title="settings" image="user_male" landscapeImage="user_male" id="SPe-DM-CfY">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <segue destination="42o-gc-Yba" kind="show" id="vMm-xe-BS1"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
            </objects>
            <point key="canvasLocation" x="-1236" y="-900"/>
        </scene>
        <!--ReadUpdate-->
        <scene sceneID="mFX-Qv-fIZ">
            <objects>
                <viewControllerPlaceholder storyboardName="Updates" referencedIdentifier="ReadUpdate" id="a7L-va-Xm9" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="7ye-cb-hoO" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-1735" y="-488"/>
        </scene>
        <!--Tab Bar Controller-->
        <scene sceneID="9CT-5z-gFu">
...
            <point key="canvasLocation" x="-2779" y="-900"/>
        </scene>
        <!--Learn Navigation-->
        <scene sceneID="Wha-ha-q5N">
            <objects>
                <navigationController title="Learn Navigation" automaticallyAdjustsScrollViewInsets="NO" id="AiB-Sk-4jg" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Learn" image="book" id="iTj-Py-AFM"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" largeTitles="YES" id="c7m-Uf-on6">
                        <rect key="frame" x="0.0" y="20" width="414" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </navigationBar>
...
